<resources>
    <string name="app_name">CSCI4176-GroupProject</string>
    <string name="play">Play</string>
    <string name="level_reset_button">Level Reset Button</string>
    <string name="back_button">Back Button</string>
    <string name="settings_button_description">Settings Button</string>
    <string name="default_title">Title</string>
    <string name="default_star_count">: 5</string>
    <string name="stars">Stars</string>
    <string name="testing_reset_levels">TESTING reset levels</string>
    <string name="wall_tile">Wall Tile</string>
    <string name="ground_tile">Ground Tile</string>
    <string name="level_selection_scroll_back">Level selection scroll back</string>
    <string name="level_selection_scroll_forward">Level selection scroll forward</string>
    <string name="settings">Settings</string>
    <string name="store">Store</string>
    <string name="level_select">Level select</string>
    <string name="level_star_number_1">level star number 1</string>
    <string name="level_star_number_2">level star number 2</string>
    <string name="level_star_number_3">level star number 3</string>
    <string name="cancel">Cancel</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_level_x_for_1_star">Unlock Level X for 1 Star?</string>
    <string name="time">Time:</string>
    <string name="next_level">Next Level</string>
    <string name="main_menu">Main Menu</string>
    <string name="app_title">Colour Slide</string>
    <string name="_5">: 5</string>
    <string name="default_button">Button</string>
    <string name="default_skin_title">Devil Ball</string>
    <string name="default_content_description">Unique Skin (Cost:7)</string>
    <string name="color_blind_mode">Color Blind Mode</string>
    <string name="haptics">Haptics</string>
    <string name="player_icon">Player Icon</string>
    <string name="apply">Apply</string>
    <string name="level_complete">Level Complete!</string>
    <string name="player_character">Player character</string>
    <string name="developer_settings">Developer Settings</string>
    <string name="select_your_player_skin">Select your player skin</string>
    <string name="level_reset">Level Reset On</string>
    <string name="don_t_reset_levels">Reset Levels Off</string>
    <string name="store_reset">Store Reset On</string>
    <string name="don_t_reset_store">Reset Store Off</string>
    <string name="best_time">Best Time:</string>
    <string name="new_best_time">New Best Time!</string>
</resources>