<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="100dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="25dp"
    tools:context=".fragments.CosmeticButtonFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cosmeticImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/default_button" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_skin_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_content_description"
        android:textAlignment="center" />
</LinearLayout>