<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TopBarFragment">

    <ImageButton
        android:id="@+id/BackToHomeButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="?attr/homeAsUpIndicator"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/default_title"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="34sp" />

    <ImageButton
        android:id="@+id/SettingsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/settings_icon"
        android:contentDescription="@string/settings_button_description"/>
</TableRow>