<?xml version="1.0" encoding="utf-8"?>
<!--Contributors: Jason Havill-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="25dp"
    android:orientation="vertical"
    tools:context=".fragments.LevelButtonFragment"
    tools:keep="@layout/fragment_level_button">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:width="50dp"
        android:height="50dp"
        android:text="@string/default_button" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/level_star_number_1"
            android:tag="levelStar"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/level_star_number_2"
            android:tag="levelStar"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/level_star_number_3"
            android:tag="levelStar"
            app:srcCompat="@android:drawable/btn_star_big_on" />

    </LinearLayout>

</LinearLayout>