<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/levelSelectFullscreenContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.CSCI4176GroupProject.FullscreenContainer"
    tools:context=".activities.MainMenuActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <!-- used as a placeholder for the top bar holding the back button, title and settings-->
            <FrameLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/btn_star_big_on"
                    android:contentDescription="@string/stars" />

                <TextView
                    android:id="@+id/starCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/default_star_count"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="573dp"
                android:layout_weight="1">

                <!--             Each row will have level button fragments-->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">
                    <!--                Frame layouts are used as placeholders for the fragments-->
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tag="levelButton" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tag="levelButton" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tag="levelButton" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tag="levelButton" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tag="levelButton" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tag="levelButton" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/resetLevels"
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:text="@string/testing_reset_levels" />
                </TableRow>

            </TableLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/levelsBackButton"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:rotation="90"
                android:contentDescription="@string/level_selection_scroll_back"
                app:srcCompat="@android:drawable/arrow_down_float" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="61dp" />

            <ImageButton
                android:id="@+id/levelsNextButton"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:rotation="90"
                android:contentDescription="@string/level_selection_scroll_forward"
                app:srcCompat="@android:drawable/arrow_up_float" />

        </TableRow>
    </TableLayout>
</FrameLayout>